--- a/Gutop.Utils/Azeroth.Util.csproj
+++ b/Gutop.Utils/Azeroth.Util.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{33077314-DC9A-4881-A11A-651D024FE5BF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gutop.Utils</RootNamespace>
-    <AssemblyName>Gutop.Utils</AssemblyName>
+    <RootNamespace>Azeroth.Util</RootNamespace>
+    <AssemblyName>Azeroth.Util</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
