--- a/Gutop.UI/Web.config
+++ b/Gutop.UI/Web.config
@@ -38,7 +38,7 @@
     </compilation>
     <httpRuntime targetFramework="4.5.2" />
     <authentication mode="Forms">
-      <forms  defaultUrl="/home/index" loginUrl="/account/index" cookieless="UseCookies" slidingExpiration="true" timeout="30"></forms>
+      <forms defaultUrl="/home/index" loginUrl="/account/index" cookieless="UseCookies" slidingExpiration="true" timeout="30"></forms>
     </authentication>
     <authorization>
       <allow users="*" />
@@ -80,10 +80,10 @@
     <add name="master" providerName="MySql.Data.MySqlClient" connectionString="Data Source=127.0.0.1;Initial Catalog=tzp;User ID=root;Password=123456" />
   </connectionStrings>
   <log4net>
-    <logger name="loginfo">
+    <root>
       <level value="INFO" />
       <appender-ref ref="InfoAppender" />
-    </logger>
+    </root>
     <appender name="InfoAppender" type="log4net.Appender.RollingFileAppender">
       <!--设置日志存储路径-->
       <param name="File" value="log4net/log/" />
@@ -98,8 +98,8 @@
       <param name="DatePattern" value="yyyyMM/dd&quot;.log&quot;" />
       <!--按照何种方式产生多个日志文件(日期[Date],文件大小[Size],混合[Composite])-->
       <param name="RollingStyle" value="Date" />
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%n日志时间：%d [%t] %n日志级别：%-5p %n消息描述：%c [%x] %n%m %n " />
+      <layout type="Azeroth.Util.SxPatternLayout,Azeroth.Util">
+        <param name="ConversionPattern" value="%n参数：%sx{Arguments}%n日志时间：%d [%t] %n日志级别：%-5p %n消息描述：%c [%x] %n%m %n " />
       </layout>
     </appender>
   </log4net>
