log4net的使用优化

--- a/Gutop.UI/Web.config
+++ b/Gutop.UI/Web.config
@@ -99,7 +99,13 @@
       <!--按照何种方式产生多个日志文件(日期[Date],文件大小[Size],混合[Composite])-->
       <param name="RollingStyle" value="Date" />
       <layout type="Azeroth.Util.SxPatternLayout,Azeroth.Util">
-        <param name="ConversionPattern" value="%n参数：%sx{Arguments}%n日志时间：%d [%t] %n日志级别：%-5p %n消息描述：%c [%x] %n%m %n " />
+        <param name="ConversionPattern" value="%n参数：%sx{Argument}
+               %n消息：%sx{Remark}%m
+               %n时间：%d 
+               %n线程：%t
+               %n级别：%-5p 
+               %n类别：%c 
+               %n " />
       </layout>
     </appender>
   </log4net>
