--- a/Gutop.Model/Gutop.Model.csproj
+++ b/Gutop.Model/Gutop.Model.csproj
@@ -38,14 +38,6 @@
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.6.9.12\lib\net45\MySql.Data.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.Entity.6.9.12\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -58,27 +50,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheCategory.cs" />
-    <Compile Include="Entity\DbContext.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DbContext.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\Log.cs">
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\Organization.cs">
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\Staff.cs">
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\UrlMap.cs">
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\User.cs">
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Entity\DbContext.cs" />
+    <Compile Include="Entity\Log.cs" />
+    <Compile Include="Entity\Organization.cs" />
+    <Compile Include="Entity\Staff.cs" />
+    <Compile Include="Entity\UrlMap.cs" />
+    <Compile Include="Entity\User.cs" />
     <Compile Include="MenuCollections.cs" />
+    <Compile Include="Migrations\202108060649559_dbinit0806.cs" />
+    <Compile Include="Migrations\202108060649559_dbinit0806.Designer.cs">
+      <DependentUpon>202108060649559_dbinit0806.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionCategory.cs" />
     <Compile Include="UserWrapper.cs" />
@@ -91,25 +74,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Entity\DbContext.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>DbContext.cs</LastGenOutput>
-    </Content>
-    <Content Include="Entity\Entity.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Entity.txt</LastGenOutput>
-    </Content>
-    <Content Include="Entity\Entity.txt">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Content>
-    <Content Include="Entity\MultipleOutputHelper.txt" />
+    <EmbeddedResource Include="Migrations\202108060649559_dbinit0806.resx">
+      <DependentUpon>202108060649559_dbinit0806.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
