--- a/Gutop.Model/App.config
+++ b/Gutop.Model/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
 <connectionStrings>
-    <add name="xcdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=xcdb;User ID=sa;Password=123456"/>
+    <add name="xcdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=xcdb;User ID=sa;Password=@"/>
   </connectionStrings>
 </configuration>
