--- a/Gutop/Web.config
+++ b/Gutop/Web.config
@@ -75,7 +75,7 @@
   </runtime>
 
   <connectionStrings>
-    <add name="xcdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=xcdb;User ID=sa;Password=123456"/>
+    <add name="xcdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=xcdb;User ID=sa;Password=@"/>
   </connectionStrings>
   <log4net>
     <root>
